--- a/static/main.css
+++ b/static/main.css
@@ -2,104 +2,105 @@ body {
     position: relative;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 14px;
-
     width: 800px;
     margin: 0 auto;
     padding: 10px;
     color: #333;
 }
-
 .login-area {
-    font-size: 13px;
+    font-size: 23px;
     color: gray;
     position: absolute;
     top: 10px;
     right: 10px;
 }
-
 .login-link {
     color: gray;
     text-decoration: none;
 }
-
 .login-link:visited {
     color: gray;
 }
-
 .login-link:hover {
     text-decoration: underline;
+    color: black;
 }
-
 h2 {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
 }
-
 .error {
     color: red;
 }
-
 label {
-  display: block;
-  font-size: 20px;
+    display: block;
+    font-size: 20px;
 }
-
 label + label {
     margin-top: 20px;
 }
-
 input[type=text] {
     width: 500px;
     font-size: 20px;
     padding: 2px;
     font-family: monospace;
 }
-
 textarea {
-  width: 500px;
-  height: 400px;
-  font-size: 17px;
-  font-family: monospace;
+    width: 500px;
+    height: 400px;
+    font-size: 17px;
+    font-family: monospace;
 }
-
 input[type=submit] {
-  font-size: 24px;
+    font-size: 24px;
 }
-
 .main-title {
-    display: block;
-    color: #222;
-    font-size: 40px;
+    color: #111;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-size: 80px;
     font-weight: bold;
+    letter-spacing: -1px;
+    line-height: 2;
     text-align: center;
-    margin-bottom: 30px;
-    text-decoration: none;
 }
-
 .post + .post {
     margin-top: 15px;
 }
-
 .post-heading {
     position: relative;
     border-bottom: 3px solid #666;
 }
-
 .post-title {
     font-size: 24px;
     font-weight: bold;
 }
-
 .post-date {
     position: absolute;
     right: 0px;
     bottom: 0px;
     color: #999;
-
 }
-
 .post-content {
     margin-top: 5px;
 }
-
+button {
+    -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 0 0;
+    -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 0 0;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 1px 0 0;
+    color: #333;
+    background-color: #FA2;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border: none;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    height: 32px;
+    padding: 4px 16px;
+    text-shadow: #FE6 0 1px 0;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+}
