--- a/templates/front.html
+++ b/templates/front.html
@@ -6,5 +6,14 @@
     {{ p.render() | safe }}
     <br><br>
   {% endfor %}
+  {% if img_url %}
+        <img src="{{img_url}}">
+  {% endif %}
 
+<div class="knapp">
+    <form method="Post" action="/blog/newpost">
+      <Button type="Submit">New Post!</Button>
+    </form>
+  </div>
 {% endblock %}
+
